# zk-oracle-quest

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/admin/: page.tsx
app/app/events/: page.tsx
app/app/game/: PhaserGame.tsx  main.ts  page.tsx
app/app/game/scenes/: Boot.ts  MainGame.ts
app/components/: BetModal.tsx  QuestLog.tsx  WalletProvider.tsx
app/idl/: simple_oracle_quest.json  zk_oracle_quest.json
app/lib/: anchor-client.ts  light-integration.ts  mock-data.ts  program-interactions.ts
programs/simple-oracle-quest/: Cargo.toml
programs/simple-oracle-quest/src/: lib.rs
programs/zk-oracle-quest/: Cargo.toml
programs/zk-oracle-quest/src/: lib.rs
programs/zk-oracle-quest/tests/: test.rs  test_unit.rs
tests/: test.ts
