[package]
name = "zk-oracle-quest"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_oracle_quest"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-hasher = { version = "5.0.0", features = ["solana"] }
light-sdk = { version = "0.16.0", features = ["anchor", "v2"] }
light-sdk-types = { version = "0.16.0", features = ["anchor", "v2"] }

[dev-dependencies]
light-client = { version = "0.16.0", features = ["v2"] }
light-program-test = { version = "0.16.0", features = ["v2"] }
solana-sdk = "2.2"
tokio = "1.43.0"
litesvm = "0.8"

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
